# HardwareKitExample

./: LICENSE  README.md
src/: .gitignore  27-usbdevices_permissions.rules  build-and-deploy.sh
src/RFID_DRIVER/: CMakeLists.txt  Config.cmake.in  How_to_use.txt  plcnext.proj
src/RFID_DRIVER/License/: license-hid
src/RFID_DRIVER/include/: ADD_PUBLIC_HEADERS_HERE.txt  hidapi.h  hidapi_libusb.h  keymap.h
src/RFID_DRIVER/include/RFID_DRIVER/: RFID_DRIVER.hpp
src/RFID_DRIVER/src/: RFID_DRIVER.cpp  hid.c
src/RFID_READER/: CMakeLists.txt  plcnext.proj
src/RFID_READER/src/: Component.cpp  Component.hpp  DataExchange.cpp  DataExchange.hpp
